--- a/fotosselecionadaspapai.html
+++ b/fotosselecionadaspapai.html
@@ -103,7 +103,7 @@
              <ul>
               
               <a class="my-button" href="index.html"><button>Anabela Aparecida Silvestre Zanoni</button></a>
-              <a class="my-button" href="fotosselecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
+              <a class="my-button" href="fotosSelecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
               <a class="my-button" href="faseum.html"><button>Jogo Reino de Ouro</button></a>
               <a class="my-button" href="videosbela.html"><button>Historinhas da Belinha.</button></a>
 
