--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
              <ul>
               
               <a class="my-button" href="fotosselecionadaspapai.html"><button>Fotos Selecionadas do Papai</button></a>
-              <a class="my-button" href="fotosselecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
+              <a class="my-button" href="fotosSelecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
               <a class="my-button" href="faseum.html"><button>Jogo Reino de Ouro</button></a>
               <a class="my-button" href="videosbela.html"><button>Historinhas da Belinha.</button></a>
 
