--- a/videosbela.html
+++ b/videosbela.html
@@ -104,7 +104,7 @@
               
               <a class="my-button" href="index.html"><button>Anabela Aparecida Silvestre Zanoni</button></a>
               <a class="my-button" href="fotosselecionadaspapai.html"><button>Fotos Selecionadas do Papai</button></a>
-              <a class="my-button" href="fotosselecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
+              <a class="my-button" href="fotosSelecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
 
             </ul>
          </nav>
