--- a/videosbela.html
+++ b/videosbela.html
@@ -105,6 +105,7 @@
               <a class="my-button" href="index.html"><button>Anabela Aparecida Silvestre Zanoni</button></a>
               <a class="my-button" href="fotosselecionadaspapai.html"><button>Fotos Selecionadas do Papai</button></a>
               <a class="my-button" href="fotosSelecionadasmamae.html"><button>Fotos Selecionadas da Mamãe</button></a>
+              <a class="my-button" href="faseum.html"><button>Jogo Reino de Ouro</button></a>   
 
             </ul>
          </nav>
