--- a/faseseis.html
+++ b/faseseis.html
@@ -142,7 +142,7 @@
     <script>
           let currentDialogue = 0;
     const dialoguesStatic = ["Olá Rei João!", "Você voltou por mim?", "Você a tem!"];
-    const dialoguesNonStatic = ["Oi Princeia Linda!", "Sim voltei por sua mão!", "Te minha minha rainha!"];
+    const dialoguesNonStatic = ["Oi Princeia Linda!", "Sim voltei por sua mão!", "Tu és minha rainha!"];
     let score = 0;
 
     function moveCharacter(direction) {
